--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,13 +1,18 @@
+/* Limpar formatação padrão */
 * {
     padding: 0;
     margin: 0;
 }
 
+
+/* Fonte customizada */
 @font-face {
     font-family: "Aldo";
     src: url("../fonts/AldotheApache.woff");
 }
 
+
+/* Formatações gerais */
 body {
     font-family: "Aldo", "Helvetica", monospace;
 }
@@ -16,20 +21,89 @@ p {
     margin: 5px;
 }
 
+img {
+    width: 100%;
+}
+
+ul {
+	list-style: none;
+}
+
+a {
+	text-decoration: none;
+}
+	
+
+/* Cabeçalho */
+header {
+	text-transform: uppercase;
+}
+
+h1 a {
+	color: #000;
+}
+
+.previous {
+	float: left;
+}
+
+.next {
+	float: right;
+}
+
+.menu-previous-next {
+	padding: 3px;
+	clear: both;
+}
+
+.menu-previous-next a {
+	color: gray;
+}
+
+.menu-previous-next a:hover{
+	opacity: 0.7;
+}
+
+
+/* Menu Cabeçalho */
+nav ul {
+	float: left;
+	margin-bottom: 25px;
+}
+
+nav ul li {
+	float: left;
+	text-align: center;
+	border: 1px solid #222;
+	margin-right: 5px;
+}
+
+nav ul li a {
+	display: block;
+	color: #000;
+	padding: 7px;
+}
+
+.choices a:hover, nav ul li a:hover {
+    background-color: #222;
+    color: #fff;
+}
+
+
+/* Layout */
 #container {
     width: 960px;
     margin: 10px auto;
 }
 
 #principal {
-    border: 2px solid #000;
+	clear: both;
+    border: 5px solid #000;
 }
-
-.textbox, .choices {
-    border: 1px solid #333;
-}
-
+ 
 .textbox {
+	border-top: 5px solid #000;
+	border-bottom: 5px solid #000;
     padding: 10px;
     text-align: justify;
     font-size: 2em;
@@ -56,19 +130,12 @@ p {
     display: block;
 }
 
-.choices a:hover {
-    background-color: #222;
-    color: #fff;
-}
 
-img {
-    width: 100%;
-}
-
+/* Footer */
 footer {
     background-color: #f3f3f3;
     text-align: center;
-    margin-top: 20px;
+    margin-top: 30px;
     height: 30px;
 }
 
